plugins {
   id "java"
   id "edu.wpi.first.GradleRIO" version "2020.2.2"
}

group = 'com.stuypulse'
version = '1.0.0'

sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11

sourceSets {
   main {
      java {
         srcDir "src"
      }
   }

   // If we ever write tests
   // test {
   //   java {
   //      srcDir "test"
   //   }
   // }
}

configurations {
   jaxDoclet
}

dependencies { 
   implementation wpi.deps.wpilib()
   nativeZip wpi.deps.wpilibJni(wpi.platforms.roborio)
   nativeDesktopZip wpi.deps.wpilibJni(wpi.platforms.desktop)

   implementation wpi.deps.vendor.java()
   nativeZip wpi.deps.vendor.jni(wpi.platforms.roborio)
   nativeDesktopZip wpi.deps.vendor.jni(wpi.platforms.desktop)

   compile group: 'org.knowm.xchart', name: 'xchart', version: '3.2.2'

   testImplementation 'junit:junit:4.12'

   // Enable simulation gui support. Must check the box in vscode to enable support
   // upon debugging
   simulation wpi.deps.sim.gui(wpi.platforms.desktop, false)
}

javadoc {
  destinationDir = file('docs/')
}

jar {
   from sourceSets.main.allSource
}